--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,15 @@
         <!-- Materialize -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
+        <!-- AnimateCSS -->
+        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css'>
+    
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+        
     </head>
 
-    <body class='h-100'>
+    <body class='h-100 grey lighten-3 roboto'>
         <app-root></app-root>
     </body>
 
