--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         
     </head>
 
-    <body class='h-100 grey lighten-3 roboto'>
+    <body class='h-100 primary-background roboto'>
         <app-root></app-root>
     </body>
 
