Added GH Pages for Angular

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,11 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Keywordfactory</title>
+        <title>Keyword Factory</title>
+
+        <!-- <base href="/keywordFactory/"> -->
         <base href="/">
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
 
