Keywords now have isActive property; updated front end to reflect back end changes

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         
     </head>
 
-    <body class='h-100 primary-background roboto'>
+    <body class='h-100 primary-background roboto' style="overflow: hidden;">
         <app-root></app-root>
     </body>
 
